Fix the gaps between mod items; center text in mod items

--- a/src/components/ModList.css
+++ b/src/components/ModList.css
@@ -6,15 +6,25 @@
   display: flex;
   flex-wrap: wrap;
   gap: 0.5em;
-  justify-content: space-around;
 
   min-width: 50vw;
 }
 
 #mods-list li {
   margin: 0;
-  padding: 0;
   flex: 1 1 30%;
+  align-self: stretch;
+
+  list-style-type: none;
+}
+
+.mod-chip {
+  height: 100%;
+
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .mod-chip {
@@ -31,7 +41,7 @@
 .mod-chip:hover {
   background-color: var(--lowkey-color);
   color: var(--accent-color);
-cursor: pointer;
+  cursor: pointer;
 }
 
 #total {
